# src/main/java/com/ecommerce/complaints/controller/AuthApiImpl.java
@@ -1,0 +1,25 @@
+package com.ecommerce.complaints.controller;
+
+import com.ecommerce.complaints.controller.api.AuthApi;
+import com.ecommerce.complaints.model.vto.AuthResponse;
+import com.ecommerce.complaints.model.vto.LoginRequest;
+import com.ecommerce.complaints.model.vto.RegisterRequest;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequiredArgsConstructor
+public class AuthApiImpl implements AuthApi {
+
+    @Override
+    public ResponseEntity<AuthResponse> login(LoginRequest loginRequest) {
+        return ResponseEntity.status(HttpStatus.NOT_IMPLEMENTED).build();
+    }
+
+    @Override
+    public ResponseEntity<AuthResponse> register(RegisterRequest registerRequest) {
+        return ResponseEntity.status(HttpStatus.NOT_IMPLEMENTED).build();
+    }
+}
